// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`learn more renders correctly with a single link 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-0"
      >
        Learn more: 
        <a
          href="/foobar"
        >
          Foobar
        </a>
      </div>
      <div>
        Icon: openapi-logo
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`learn more renders correctly with multiple links 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-0"
      >
        <a
          href="/foobar"
        >
          Foobar
        </a>
        <a
          href="/foobar"
        >
          Foobar
        </a>
        <a
          href="/foobar"
        >
          Foobar
        </a>
      </div>
      <div>
        Icon: openapi-logo
      </div>
    </div>
  </div>
</DocumentFragment>
`;
